# internal/server/router.go
@@ -5,6 +5,7 @@ import (
 	"kedai/backend/be-kedai/internal/server/middleware"
 
 	locationHandler "kedai/backend/be-kedai/internal/domain/location/handler"
+	marketplaceHandler "kedai/backend/be-kedai/internal/domain/marketplace/handler"
 	productHandler "kedai/backend/be-kedai/internal/domain/product/handler"
 	shopHandler "kedai/backend/be-kedai/internal/domain/shop/handler"
 	userHandler "kedai/backend/be-kedai/internal/domain/user/handler"
@@ -14,10 +15,11 @@ import (
 )
 
 type RouterConfig struct {
-	UserHandler     *userHandler.Handler
-	LocationHandler *locationHandler.Handler
-	ProductHandler  *productHandler.Handler
-	ShopHandler     *shopHandler.Handler
+	UserHandler        *userHandler.Handler
+	LocationHandler    *locationHandler.Handler
+	ProductHandler     *productHandler.Handler
+	ShopHandler        *shopHandler.Handler
+	MarketplaceHandler *marketplaceHandler.Handler
 }
 
 func NewRouter(cfg *RouterConfig) *gin.Engine {
@@ -121,7 +123,20 @@ func NewRouter(cfg *RouterConfig) *gin.Engine {
 		shop := v1.Group("/shops")
 		{
 			shop.GET("/:slug", cfg.ShopHandler.FindShopBySlug)
+			shop.GET("/:slug/products", cfg.ProductHandler.GetProductsByShopSlug)
 			shop.GET("/:slug/vouchers", cfg.ShopHandler.GetShopVoucher)
+			authenticated := shop.Group("", middleware.JWTAuthorization, cfg.UserHandler.GetSession)
+			{
+				authenticated.GET("/:slug/vouchers/valid", cfg.ShopHandler.GetValidShopVoucher)
+			}
+		}
+		marketplace := v1.Group("/marketplaces")
+		{
+			marketplace.GET("/vouchers", cfg.MarketplaceHandler.GetMarketplaceVoucher)
+			authenticated := marketplace.Group("", middleware.JWTAuthorization, cfg.UserHandler.GetSession)
+			{
+				authenticated.GET("/vouchers/valid", cfg.MarketplaceHandler.GetValidMarketplaceVoucher)
+			}
 		}
 	}
 
