# swagger/swagger.yaml
@@ -16,6 +16,7 @@ tags:
   - name: User
   - name: Product
   - name: Shop
+  - name: Marketplace
 paths:
   /v1/users/wallets:
     get:
@@ -2416,18 +2417,10 @@ paths:
                                 example: 100
                           - type: object
                             properties:
-                              bulk:
-                                $ref: '#/components/schemas/ProductBulkPrice'
-                          - type: object
-                            properties:
                               vouchers:
                                 type: array
                                 items:
                                   $ref: '#/components/schemas/ShopVoucher'
-                          - type: object
-                            properties:
-                              media:
-                                $ref: '#/components/schemas/ProductMedia'
                           - type: object
                             properties:
                               couriers:
@@ -2450,17 +2443,7 @@ paths:
                           - type: object
                             properties:
                               shop:
-                                allOf:
-                                  - $ref: '#/components/schemas/Shop'
-                                  - type: object
-                                    properties:
-                                      address:
-                                        allOf:
-                                          - $ref: '#/components/schemas/UserAddress'
-                                          - type: object
-                                            properties:
-                                              subdistrict:
-                                                $ref: '#/components/schemas/Subdistrict'
+                                $ref: '#/components/schemas/Shop'
                           - type: object
                             properties:
                               sku:
@@ -2491,84 +2474,6 @@ paths:
                   message:
                     type: string
                     example: "error message"                
-  /v1/products/skus:
-    get:
-      tags:
-        - Product
-      summary: Get product SKU
-      description: Get product SKU by using combination of product variant IDs
-      parameters:
-        - in: query
-          name: variantId
-          required: true
-          description: list of product variant IDs to combine, separated by comma. Each variant ID must be an integer greater than or equal 1. There should be at least 1 variant ID. If there are more than 2, only the first two will be used
-          schema:
-            type: string
-            example: 1,3
-      responses:
-        '200':
-          description: operation successful
-          content:
-            application/json:
-              schema:
-                allOf:
-                  - $ref: '#/components/schemas/Response'
-                  - type: object
-                    properties:
-                      data:
-                        $ref: '#/components/schemas/SKU'
-        '400':
-          description: bad request
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: string
-                    example: "BAD_REQUEST"
-                  message:
-                    type: string
-                    example: "error message"
-        '404':
-          description: Not found
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: string
-                    example: "NOT_FOUND"
-                  message:
-                    type: string
-                    example: "error message"
-        '422':
-          description: Invalid variant
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: string
-                    example: "INVALID_VARIANT"
-                  message:
-                    type: string
-                    example: "error message"
-        '500':
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                type: object
-                properties:
-                  code:
-                    type: string
-                    example: "INTERNAL_SERVER_ERROR"
-                  message:
-                    type: string
-                    example: "error message"
   /v1/products:
     get:
       tags:
@@ -2886,6 +2791,120 @@ paths:
                   message:
                     type: string
                     example: "error message"
+  /v1/shops/{slug}/products:
+    get:
+      tags:
+        - Shop
+      summary: Get shop product list
+      description: Get all active products from given shop
+      parameters:
+        - in: path
+          name: slug
+          description: slug code for given shop
+          required: true
+          schema:
+            type: string
+            example: shop-slug
+        - in: query
+          name: limit
+          schema:
+            type: integer
+            default: 10
+            example: 5
+        - in: query
+          name: page
+          schema:
+            type: integer
+            default: 1
+            example: 1
+        - in: query
+          name: sort
+          description: shop product list sort method
+          schema:
+            type: string
+            default: recommended
+            enum: [recommended, latest, top_sales]
+            example: recommended
+        - in: query
+          name: priceSort
+          description: shop product list price sort method
+          schema:
+            type: string
+            default: recommended
+            enum: [price_low, price_high]
+            example: price_low
+        - in: query
+          name: shopProductCategoryID
+          description: shop category ID. If not defined then will get products from all categories
+          schema:
+            type: integer
+            default: 0
+            example: 0
+        - in: query
+          name: exceptionID
+          description: product ID to hide from this list. If given, will get all product from given shop except product which has this ID
+          schema:
+            type: integer
+            example: 1
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - type: object
+                    properties:
+                      code:
+                        type: string
+                        example: OK
+                      message:
+                        type: string
+                        example: success
+                      data:
+                        allOf:
+                          - $ref: '#/components/schemas/PaginationResponse'
+                          - type: object
+                            properties:
+                              data:
+                                allOf:
+                                  - $ref: '#/components/schemas/Product'
+                                  - type: object
+                                    properties:
+                                      imageUrl:
+                                        type: string
+                                        example: http://example/image.png
+                                  - type: object
+                                    properties:
+                                      totalStock:
+                                        type: integer
+                                        example: 100
+        '404':
+          description: shop not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "SHOP_NOT_REGISTERED"
+                  message:
+                    type: string
+                    example: "error message"
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "INTERNAL_SERVER_ERROR"
+                  message:
+                    type: string
+                    example: "error message"
   /v1/shops/{slug}/vouchers:
     get:
       tags:
@@ -2918,6 +2937,19 @@ paths:
                         type: array
                         items:
                           $ref: '#/components/schemas/ShopVoucher'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "SHOP_NOT_REGISTERED"
+                  message:
+                    type: string
+                    example: "shop not found"                      
         '500':
           description: Internal server error
           content:
@@ -2931,6 +2963,66 @@ paths:
                   message:
                     type: string
                     example: "error message"
+  /v1/shops/{slug}/vouchers/valid:
+    get:
+      security:
+        - BearerAuth: []
+      tags:
+        - Shop
+      summary: Get valid shop voucher
+      description: Get shop list of valid user shop vouchers
+      parameters:
+        - in: path
+          name: slug
+          description: Slug code of chosen shop
+          required: true
+          schema:
+            type: string
+            example: "shop"
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Response'
+                  - type: object
+                    properties:
+                      code:
+                        example: "OK"
+                      message:
+                        example: "ok"
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/ShopVoucher'
+        '404':
+          description: Not found
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "SHOP_NOT_REGISTERED"
+                  message:
+                    type: string
+                    example: "shop not found"                     
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "INTERNAL_SERVER_ERROR"
+                  message:
+                    type: string
+                    example: "error message"                  
   /v1/users/sealabs-pays:
     get:
       security:
@@ -3056,6 +3148,108 @@ paths:
                   message:
                     type: string
                     example: "error message"
+  /v1/marketplaces/vouchers:
+    get:
+      tags:
+        - Marketplace
+      parameters:
+        - in: query
+          name: categoryId
+          schema:
+            type: integer
+            default: 0
+          description: No default category, will get all if not specified
+        - in: query
+          name: paymentMethodId
+          schema:
+            type: integer
+            default: 0
+          description: No default payment method, will get all if not specified
+      summary: Get marketplace vouchers
+      description: Get list of available marketplace vouchers
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Response'
+                  - type: object
+                    properties:
+                      code:
+                        example: "OK"
+                      message:
+                        example: "ok"
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/MarketplaceVoucher'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "INTERNAL_SERVER_ERROR"
+                  message:
+                    type: string
+                    example: "error message"
+  /v1/marketplaces/vouchers/valid:
+    get:
+      security:
+        - BearerAuth: []
+      tags:
+        - Marketplace
+      parameters:
+        - in: query
+          name: categoryId
+          schema:
+            type: integer
+            default: 0
+          description: No default category, will get all if not specified
+        - in: query
+          name: paymentMethodId
+          schema:
+            type: integer
+            default: 0
+          description: No default payment method, will get all if not specified  
+      summary: Get valid user marketplace vouchers
+      description: Get list of valid user marketplace vouchers
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/Response'
+                  - type: object
+                    properties:
+                      code:
+                        example: "OK"
+                      message:
+                        example: "ok"
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/MarketplaceVoucher'
+        '500':
+          description: Internal server error
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  code:
+                    type: string
+                    example: "INTERNAL_SERVER_ERROR"
+                  message:
+                    type: string
+                    example: "error message"                            
 components:
   schemas:
     User:
@@ -3114,13 +3308,6 @@ components:
           type: integer
           format: float
           example: 4.9
-        description:
-          type: string
-          example: shop description
-        photoUrl:
-          type: string
-          format: url
-          example: http://shop.photo/image.png
         joinedDate:
           type: string
           format: datetime
@@ -3180,6 +3367,45 @@ components:
         shopId:
           type: number
           example: 1
+    MarketplaceVoucher:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 2
+        code:
+          type: string
+          example: "code"
+        name:
+          type: string
+          example: "voucher"
+        amount:
+          type: number
+          format: float
+          example: 50000
+        type:
+          type: string
+          example: "nominal"
+        isHidden:
+          type: boolean
+          example: false
+        description:
+          type: string
+          example: "desc"
+        minimumSpend:
+          type: number
+          format: float
+          example: 100000
+        expiredAt:
+          type: string
+          format: dateTime
+          example: "2006-01-02T00:00:00Z"
+        categoryId:
+          type: integer
+          example: 1
+        paymentMethodId:
+          type: integer
+          example: 2
     Token:
       type: object
       properties:
@@ -3354,38 +3580,6 @@ components:
           type: integer
         categoryId:
           type: integer
-    ProductMedia:
-      type: object
-      properties:
-        id:
-          type: integer
-          example: 1
-        url:
-          type: string
-          format: url
-          example: http://example/image.png
-        productId:
-          type: integer
-          example: 1
-    ProductBulkPrice:
-      type: object
-      properties:
-        id:
-          type: integer
-          example: 1
-        minQuantity:
-          type: integer
-          example: 10
-        maxQuantity:
-          type: integer
-          example: 100
-        price:
-          type: number
-          format: float
-          example: 300000
-        productId:
-          type: integer
-          example: 1
     UserWishlist:
       type: object
       properties:
@@ -3463,6 +3657,9 @@ components:
         id:
           type: integer
           example: 1
+        sku:
+          type: string
+          example: product_sku
         price:
           type: number
           format: float
